# text_analyzer

./: CMakeLists.txt  README.md  coverage.html
include/: MainUtility.hpp  SortedList.hpp  TextAnalyzer.hpp
src/: CMakeLists.txt  MainUtility.cpp  SortedList.cpp  SortedList.hpp  TextAnalyzer.cpp  TextAnalyzer.hpp  main.cpp  main_utility.hpp  sorted_list.cpp  text_analyzer.cpp
test/: CMakeLists.txt
texts/: example.txt  example2.txt  example3.txt  example4.txt
tst/: CMakeLists.txt  MainUtilityTest.cpp  SortedListTest.cpp  TextAnalyzerTest.cpp  tst.cpp  tst2.cpp
